<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/my_devices"
        android:title="@string/my_devices" />

    <item
        android:id="@+id/do_import"
        android:title="@string/do_import" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/information"
        android:title="@string/information" />
</menu>