...
        android:layout_marginRight="10dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/button_more_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_background"
            android:backgroundTint="?android:attr/colorBackground"
            android:clickable="true"
...
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp">

        <ImageButton
            android:id="@+id/button_navigate_to"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_background"
            android:backgroundTint="?android:attr/colorBackground"
            android:clickable="true"
...
